fixed z-index on mobile

--- a/styles.css
+++ b/styles.css
@@ -396,7 +396,7 @@ main {
     position: absolute;
     top: 3em;
     opacity: 80%;
-    z-index: 1;
+    /*z-index: 1;*/
   }
 
   #burger {
